= Prigner v0.2.1 (2010-11-05) - Changelog

== 2010-11-05

* Releasing of version 0.2.1.
* Updates in documentation.
  * Adding of documentation for templates.
* Small fixes in prign executable.

== 2010-11-04

* Adding of template for Sinatra applications.

== 2010-10-27

* Releasing of version 0.2.0.
* Adding of template for Bash script.
* Fixes in error of the emtpy directories.
* Updates in shared templates.

== 2010-10-26

* Adjustments in CLI command.
  * The 'new' command has been updated for handling of optional files. 
  * Small fixes in CLI module.

== 2010-10-25

* Fixes in the parsing of optional files.

== 2010-10-24

* Adding of optional models.
  * Each option can include the itself list of models. 
  * Enhancements in library for handle the optional models.
* More core extensions.

== 2010-10-22

* Fixes in the tasks for releasing of packages.
* Checking of the tagged current version.

== 2010-10-21

* Releasing of version 0.1.1.
* Bug fix in command to build new project.
  * The bug occurred when the user run the command +new+. The command interpreted an option as a project  path.
* Improvements in the files of tests.
  * Shared methods in the main module. 
  * Changes in the tests for template and spec classes.

== 2010-10-19

* RDoc is the default format for documentation.
* Improvements in the tasks and documentation.
  * The task for build the changelog file has been improved. 
  * Adding of the validation for check if the version has been tagged to releasing.
* Improvements in the tasks.
  * Improvements in the versioning and packaging tasks. 
  * Adding of the packaging configurations.

== 2010-10-18

* Cleanup the code of the tasks.
* Releasing of version 0.1.0.

== 2010-10-16

* Adding of templates for Ruby projects.
* Command for create a new project.
* Status for CLI commands and fixes in builder test.
* Improvements in builder.
  * All methods returns the path and the state information. 
  * Removing of PWD from paths.

== 2010-10-15
