@@ -1,4 +1,12 @@
-= Prigner v0.2.1 (2010-11-05) - Changelog
+= Prigner v0.2.2 (2010-11-17) - Changelog
+
+== 2010-11-19
+
+* Updates in documentation and metadata.
+
+== 2010-11-17
+
+* Adding of release notes in documentation.
 
 == 2010-11-05
 
